# VanilaJS-Flask-Mongo

./: .gitignore  .replit  README.md  docker-compose.yml  pyproject.toml  replit.nix  requirements.text  sonar-project.properties  test.py
.github/workflows/: bandit.yml  pyflake.yml
backend/: Dockerfile  main.py
backend/app/: .env  main.py  requirements.txt
db/: Dockerfile
fronend/: login.html
fronend/css/: style.css
fronend/js/: script.js
frontend/: Dockerfile  index.html  package.json  profile.html  register.html
frontend/js/: script.js
