[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
flask-restful = "^0.3.10"
werkzeug = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
pymongo = "^4.8.0"
bcrypt = "^4.2.0"
api = "^0.0.7"
flask-jwt-extended = "^4.6.0"
flask-cors = "^4.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"